task 목록 조회 (필터링 포함)